feat: 本物の PTY ターミナル・解説ページ・問題改善
- xterm.js + WebSocket + Python pty.fork() で本物のターミナルを実装
  - git commit でエディタが開く、ANSI カラー、インタラクティブコマンド対応
  - PTY リサイズは FIFO 経由で TIOCSWINSZ を適用
- 演習前の解説ページを追加 (/missions/[id]/learn)
  - Git の概念・コマンドの意味を Markdown で丁寧に解説
  - 完了済みでも「解説を見る」から再閲覧可能
- ミッション説明とターミナルの setupMessage からコマンドを削除
  - 目標だけを提示してヒントはユーザーが展開する形に
- learning_content カラムを missions テーブルに追加 (V6 migration)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>